[gd_scene load_steps=11 format=3 uid="uid://dx4vd4nooxicv"]

[ext_resource type="StyleBox" uid="uid://cqou70cinmhsl" path="res://Assets/Themes/UIBox.tres" id="1_fnblh"]
[ext_resource type="Script" path="res://Scripts/GUI/game_menu.gd" id="1_h2n0v"]
[ext_resource type="FontFile" uid="uid://btsolyw7botxy" path="res://Assets/Fonts/Kenney Pixel.ttf" id="1_kofwe"]

[sub_resource type="LabelSettings" id="LabelSettings_lb58m"]
font = ExtResource("1_kofwe")
font_size = 32
font_color = Color(1, 1, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gnicc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ooc0c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mpo3k"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ysfs"]

[sub_resource type="InputEventKey" id="InputEventKey_2ctwa"]
device = -1
keycode = 53
unicode = 40

[sub_resource type="Shortcut" id="Shortcut_si36b"]
events = [SubResource("InputEventKey_2ctwa")]

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h2n0v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("1_fnblh")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Options"
label_settings = SubResource("LabelSettings_lb58m")
horizontal_alignment = 1

[node name="SaveButton" type="Button" parent="VBoxContainer/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_kofwe")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_gnicc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ooc0c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mpo3k")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1ysfs")
theme_override_styles/focus = SubResource("StyleBoxFlat_mpo3k")
shortcut = SubResource("Shortcut_si36b")
shortcut_feedback = false
text = "[ 1 ] Save"

[node name="QuitMenuButton" type="Button" parent="VBoxContainer/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_kofwe")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_gnicc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ooc0c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mpo3k")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1ysfs")
theme_override_styles/focus = SubResource("StyleBoxFlat_mpo3k")
shortcut = SubResource("Shortcut_si36b")
shortcut_feedback = false
text = "[ 5 ] Quit to Menu"

[node name="QuitGameButton" type="Button" parent="VBoxContainer/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_kofwe")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_gnicc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ooc0c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mpo3k")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1ysfs")
theme_override_styles/focus = SubResource("StyleBoxFlat_mpo3k")
shortcut = SubResource("Shortcut_si36b")
shortcut_feedback = false
text = "[ 6 ] Quit to Desktop"

[node name="CancelButton" type="Button" parent="VBoxContainer/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("1_kofwe")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_gnicc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ooc0c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mpo3k")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1ysfs")
theme_override_styles/focus = SubResource("StyleBoxFlat_mpo3k")
shortcut = SubResource("Shortcut_si36b")
shortcut_feedback = false
text = "[ 7 ] Cancel"

[connection signal="pressed" from="VBoxContainer/CenterContainer/PanelContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/PanelContainer/VBoxContainer/QuitMenuButton" to="." method="_on_quit_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/PanelContainer/VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/PanelContainer/VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
